# frost-zcash

./: .gitignore  Cargo.toml  Dockerfile.test  Makefile  README.md  TODO-ORCHARD.md
frost-lib/: Cargo.toml  cbindgen.toml
frost-lib/.cargo/: config.toml
frost-lib/src/: address.rs  handle.rs  keygen.rs  keyshare.rs  reshare.rs  sign.rs
frost-wasm/: Cargo.toml
frost-wasm/src/: address.rs  codec.rs  keygen.rs  keyshare.rs  reshare.rs  sign.rs
frozt-lib/: Cargo.toml  cbindgen.toml
frozt-lib/.cargo/: config.toml
frozt-lib/include/: frozt-lib.h
frozt-lib/src/: address.rs  bytes.rs  codec.rs  errors.rs  handle.rs  key_import.rs  keygen.rs  keyshare.rs  lib.rs  reshare.rs  sapling.rs  sign.rs  tree.rs  tx.rs  zeroize_util.rs
frozt-wasm/: Cargo.toml
frozt-wasm/src/: address.rs  codec.rs  cross_verify.rs  key_import.rs  keygen.rs  keyshare.rs  lib.rs  reshare.rs  sapling.rs  sign.rs  tree.rs  tx.rs
go-frost/: codec.go  errors.go  frost.go  frost_test.go  go.mod  lib_darwin.go  lib_linux.go
go-frost/includes/: frost-lib.h
go-frost/orchestration/: keygen.go  relay_client.go  reshare.go  sign.go
go-frozt/: codec.go  errors.go  frozt.go  frozt_test.go  go.mod  lib_darwin.go  lib_linux.go  lib_linux_amd64.go  lib_linux_arm64.go  lib_windows.go
go-frozt/includes/: frozt-lib.h  libfroztlib.dylib
go-frozt/orchestration/: barrier.go  keygen.go  relay_client.go  reshare.go  sign.go
poc-frost/: Dockerfile  Dockerfile.relay  docker-compose.yml  go.mod  relay-config.json
poc-frost/cmd/frost-party/: main.go
poc-frost/internal/party/: keygen.go  node.go  sign.go
poc-frost/internal/store/: keystore.go
poc-frost/scripts/: run-keygen.sh  run-sign.sh
poc-frozt/: Dockerfile  Dockerfile.relay  docker-compose.2of2.yml  docker-compose.yml  go.mod  go.sum  relay-config.json
poc-frozt/cmd/frozt-party/: main.go
poc-frozt/cmd/genmnemonic/: main.go
poc-frozt/internal/bip39/: bip39.go  bip39_test.go
poc-frozt/internal/config/: dotenv.go  dotenv_test.go
poc-frozt/internal/lightwalletd/: compact_formats.pb.go  compact_formats.proto  compact_formats_grpc.pb.go  scanner.go
poc-frozt/internal/orchestration/: key_import.go  keygen.go  reshare.go  sign.go  spend_sign.go
poc-frozt/internal/party/: key_import.go  keygen.go  node.go  sign.go  spend.go
poc-frozt/internal/relay/: barrier.go  encryption.go  encryption_test.go  relay_client.go
poc-frozt/internal/spend/: builder.go  builder_test.go  parser.go  parser_test.go  scanner.go  witness.go
poc-frozt/internal/store/: crypto.go  crypto_test.go  keystore.go
poc-frozt/internal/vault/: vault_test.go  vultshare.go
poc-frozt/scripts/: run-key-import.sh  run-keygen.sh  run-sign.sh  run-spend.sh
