[package]
name = "frozt-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "froztlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "475a552", features = ["frost"] }
frost-rerandomized = "2.2"
frost-core = { version = "2.2", features = ["internals"] }
sapling-crypto = "0.6"
rand = "0.8"
thiserror = "1"
lazy_static = "1.4"
bech32 = "0.11"
group = "0.13"
hex = "0.4"
zip32 = "0.2"
