[package]
name = "frozt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
frost-core = { version = "2.2", features = ["internals", "serialization"] }
frost-rerandomized = "2.2"
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "475a552", features = ["frost"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
